# firedancer

./: .gitmodules  .pre-commit-config.yaml  LICENSE  NOTICE  SECURITY.md  deps.sh
.github/workflows/: backtest.yml  benchmark.yml  book.yml  codeql.yml  coverage_test_vectors.yml  proto_check.yml  trailing_whitespace.yml
book/api/: firedancer-cli.md  metrics-generated.md  websocket.md
book/guide/: initializing.md  tuning.md
book/snippets/: console.ansi  cpuset.ansi  ethtool-channels.ansi  ethtool-loopback.ansi  ethtool-offloads.ansi  irq-affinity.ansi  irq-balance.ansi  kworkers.ansi
config/: base.mk  everything.mk
config/cross/: macos-arm-clang_x_linux-x86.mk
config/extra/: with-arm.mk  with-blst.mk  with-clang-pre.mk  with-debug.mk  with-gcc-pre.mk  with-honggfuzz.mk  with-libllvm.mk  with-lz4.mk  with-msan-pre.mk  with-msan.mk  with-rocksdb.mk  with-s2nbignum.mk  with-security.mk  with-ubsan.mk  with-x86-64.mk  with-zstd.mk
config/machine/: linux_gcc_power9.mk  linux_gcc_riscv.mk  macos_clang_m1.mk  native.mk
contrib/: build.sh  geoip_db.py  lint.sh  tag-release-firedancer.py  tag-release-frankendancer.py  tag-release.py
contrib/codegen/: generate_filters.py
contrib/lint/: check_include_guards.py
contrib/offline-replay/: README.md  offline_replay.toml  offline_replay_network_parameters.sh  run_offline_replay_backtest.sh
contrib/quic/agave_compat/: Cargo.toml  README.md  build.rs
contrib/quic/agave_compat/src/: blaster.rs  main.rs
contrib/test/: check_fp_fma.sh  gen_unit_test_pages.sh  run_script_tests.sh  run_solcap_tests.sh  run_unit_tests.sh  (+1 more)
(+511 files in other folders)
