[package]
name = "firedancer-agave-quic-test"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
bindgen = "0.70"

[dependencies]
agave-votor-messages = { path = "../../../agave/votor-messages", features = ["agave-unstable-api"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
libc = "0.2"
rand = "0.10"
solana-bls-signatures = "3.3.0"
solana-connection-cache = "3.1.14"
solana-client = "3.1.14"
solana-keypair = "3.1.2"
solana-pubkey = "3.0.0"
solana-streamer = "3.1.14"
solana-quic-client = "3.1.14"
tokio-util = "0.7"
wincode = "=0.5.3"
